--- a/server/package.json
+++ b/server/package.json
@@ -4,10 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "compile": "tsc && node dist/app.js",
+    "dev": "nodemon -e ts --exec \"npm run compile\"",
     "start": "node dist/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "", 
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
@@ -21,6 +23,7 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/mongoose": "^5.11.97",
-    "@types/node": "^20.3.2"
+    "@types/node": "^20.3.2",
+    "nodemon": "^2.0.22"
   }
 }
